# fiberreinforcedrubber

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  script_test-specimen-amplitudes-max-diff.py  script_test-specimen-amplitudes.py  script_test-specimen-simulation.py  script_test-specimen-strain.py
.github/workflows/: coverage.yml
docs/images/: LogStrainYY_V=6mm.csv  LogStrainYY_V=7mm.csv  LogStrainYY_V=7mm.md  test_specimen_forces_vs_displacement.csv  test_specimen_forces_vs_displacement.md
docs/notebooks/: ex01_specimen_amplitudes.ipynb
fiberreinforcedrubber/: _fibers.py  _materials.py  _test_specimen.py
results/: LogStrainYY_V=6mm.csv  LogStrainYY_V=6mm.md  LogStrainYY_V=7.md  LogStrainYY_V=7mm.csv  test_specimen_forces_vs_displacement.csv  test_specimen_forces_vs_displacement.md
src/fiberreinforcedrubber/: __init__.py  _fibers.py  _helpers.py  _materials.py  _rubber.py  _test_specimen.py
tests/: _test_specimen_amplitudes.py  test_specimen-amplitudes.py  test_specimen_amplitudes.py  test_specimen_amplitudes_max_diff.py  test_specimen_simulation.py  test_specimen_strain.py
