[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "fiberreinforcedrubber"
authors = [
  {email = "a.dutzler@gmail.com"},
  {name = "Andreas Dutzler"}
]
description = "Numeric simulation for a test specimen with a fiber-reinforced rubber composite."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "cord-rubber-composite", 
  "damage-mechanisms", 
  "fatigue-testing", 
  "delamination", 
  "finite-elements-analysis", 
  "tomography", 
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "tqdm",
  "meshio",
  "pyvista",
  "felupe",
  "matadi",
  "pypardiso",
  "termtables",
]

[tool.setuptools.dynamic]
version = {attr = "fiberreinforcedrubber.__about__.__version__"}

[project.urls]
Code = "https://github.com/adtzlr/fiberreinforcedrubber"
Issues = "https://github.com/adtzlr/fiberreinforcedrubber/issues"
